--- a/package.json
+++ b/package.json
@@ -37,7 +37,37 @@
     "reflect-metadata": "^0.1.3",
     "tslib": "^1.7.1",
     "rxjs": "^5.0.1",
-    "zone.js": "^0.8.10"
+    "zone.js": "^0.8.10",
+    "@agm/core": "1.0.0-beta.0",
+    "@angular/animations": "4.4.6",
+    "@asymmetrik/angular2-leaflet": "2.1.4",
+    "@nebular/theme": "2.0.0-rc.3",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
+    "@swimlane/ngx-charts": "5.2.0",
+    "angular2-chartjs": "0.3.0",
+    "angular2-toaster": "4.0.0",
+    "bootstrap": "4.0.0-beta.2",
+    "chart.js": "2.5.0",
+    "ckeditor": "4.6.2",
+    "classlist.js": "1.1.20150312",
+    "d3": "4.8.0",
+    "font-awesome": "4.7.0",
+    "intl": "1.2.5",
+    "ionicons": "2.0.1",
+    "leaflet": "1.0.3",
+    "nebular-icons": "1.0.6",
+    "ng2-ckeditor": "1.1.9",
+    "ng2-smart-table": "1.1.0",
+    "ng2-tree": "2.0.0-alpha.10",
+    "ngx-echarts": "1.2.2",
+    "normalize.css": "6.0.0",
+    "pace-js": "1.0.2",
+    "roboto-fontface": "0.8.0",
+    "socicon": "3.0.5",
+    "tether": "1.4.0",
+    "tinymce": "4.5.7",
+    "typeface-exo": "0.0.22",
+    "web-animations-js": "2.2.5"
   },
   "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
@@ -84,6 +114,22 @@
     "typescript": "^2.3.1",
     "url-loader": "^0.5.6",
     "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0"
+    "webpack-dev-server": "2.3.0",
+    "@angular/cli": "1.4.9",
+    "@angular/compiler-cli": "4.4.6",
+    "@angular/language-service": "4.4.6",
+    "@compodoc/compodoc": "1.0.1",
+    "@types/d3-color": "1.0.4",
+    "@types/jasminewd2": "2.0.3",
+    "@types/leaflet": "1.0.60",
+    "conventional-changelog-cli": "1.3.4",
+    "husky": "0.13.3",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "npm-run-all": "4.0.2",
+    "stylelint": "7.13.0",
+    "ts-node": "3.2.2",
+    "tslint-language-service": "0.9.6"
   }
 }
